--- a/app/views/public/homes/rank.html.erb
+++ b/app/views/public/homes/rank.html.erb
@@ -67,7 +67,7 @@
         </div>
       <% end %>
     </div>
-    
+
     <h5 class="text-success mt-3">コメント数TOP5</h5>
     <div class="">
       <% @post_comment_ranks.each.with_index(1) do |post, i| %>
@@ -93,6 +93,28 @@
           </div>
           <div class="text-secondary ml-auto bd-hightlight p-1">
             <%= post.post_comments.count %>コメント
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+    <h5 class="text-success mt-3">フォロワー数TOP5</h5>
+    <div class="">
+      <% @follower_ranks.each.with_index(1) do |user, i| %>
+        <div class ="border border-success p-2 m-1 d-flex bd-hightlight">
+          <div class="d-flex bd-hightlight">
+            <div class="text-success p-1">
+              第<%= i %>位
+            </div>
+            <div class="text-dark p-1">
+              <%=link_to public_user_path(user) do %>
+                <%= image_tag user.get_icon_image(20,20), class: 'frame-circle' %>
+                <%= user.nickname  %>
+              <% end %>
+            </div>
+          </div>
+          <div class="text-secondary ml-auto bd-hightlight p-1">
+            <%= user.followers.count %>人
           </div>
         </div>
       <% end %>
