--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,6 +59,16 @@
   text-align: center;
   padding: 0.15rem 0 0.15rem 0;
 }
+.rank-num {
+  color: #009688;
+}
+.rank-link input:hover + .text-info {
+  color: #009688;
+  border-radius: 5px;
+  background-color: #02beac4d;
+  text-align: center;
+  padding: 0.15rem 0 0.15rem 0;
+}
 
 .simple-calendar {
   .day {
