--- a/app/views/public/homes/rank.html.erb
+++ b/app/views/public/homes/rank.html.erb
@@ -2,12 +2,12 @@
   <div class="col-lg-6 col-12 py-4">
     <h4 class="text-info"><%= @current_user.nickname %>さんのランキング</h4>
     <h5 class="text-info mt-3">いいねTOP5</h5>
-    <div class="">
+    <div class="rank-link">
       <% @my_post_favorite_ranks.each.with_index(1) do |post, i| %>
         <%=link_to public_post_path(post) do %>
           <div class ="border border-info p-2 m-1 d-flex justify-content-between">
             <div class="text-info p-1">
-              第<%= i %>位
+              <b class="rank-num">第<%= i %>位</b>
               <%= post.body.truncate(20) %>
             </div>
             <div class="text-secondary p-1">
