--- a/app/views/admin/topic_comments/index.html.erb
+++ b/app/views/admin/topic_comments/index.html.erb
@@ -8,14 +8,14 @@
         <div class="d-flex bd-hightlight">
           <div class="bd-hightlight">
             <%= image_tag topic_comment.user.get_icon_image(30,30), class: 'frame-circle' %>
-            <%= link_to admin_user_path do %>
+            <%= link_to admin_user_path, class:'link-hover' do %>
               <span class="link-name"><%= topic_comment.user.nickname %></span>
             <% end %>
           </div>
           <span>　>>>　</span>
           <div class="bd-hightlight">
             <%= image_tag topic_comment.topic.user.get_icon_image(30,30), class: 'frame-circle' %>
-            <%= link_to admin_user_path(topic_comment.topic.user) do %>
+            <%= link_to admin_user_path(topic_comment.topic.user), class:'link-hover' do %>
               <span class="link-name"><%= topic_comment.topic.user.nickname %></span>
             <% end %>
           </div>
