--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -163,6 +163,16 @@
   border-bottom: dashed 2px #87CEFA;
 }
 
+.link-name:hover {
+  color: #6c757d;
+  border-bottom: solid 2.5px #87CEFA;
+}
+
+.link-hover:hover {
+  text-decoration: none;
+  font-weight: 600;
+}
+
 .icon-info {
   color: #17a2b8;
 }
