--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -13,7 +13,7 @@
       <% @users.each do |user| %>
         <div class="delimiter-b d-flex justify-content-between">
           <div>
-            <%= link_to admin_user_path(user), class: 'mr-auto bd-hightlight h5' do %>
+            <%= link_to admin_user_path(user), class: 'mr-auto bd-hightlight h5 link-hover' do %>
               <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
               <span class="link-name"><%= user.nickname %></span>
             <% end %>
