--- a/app/views/layouts/_user_info.html.erb
+++ b/app/views/layouts/_user_info.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h4 class="text-info">User Info</h4>
   <div>
-    <%= link_to public_user_path(user) do %>
+    <%= link_to public_user_path(user), class:'link-hover' do %>
       <%= image_tag user.get_icon_image(40,40), class: 'frame-circle' %>
       <b class="link-name"><%= user.nickname %></b>
     <% end %>
