--- a/app/views/layouts/post_partial/_body.html.erb
+++ b/app/views/layouts/post_partial/_body.html.erb
@@ -23,7 +23,7 @@
       </div>
     <% else %>
       <% if user.is_deleted == false %>
-        <%= link_to public_user_path(post.user.id), class: 'mr-auto bd-hightlight h5' do %>
+        <%= link_to public_user_path(post.user.id), class: 'mr-auto bd-hightlight h5 link-hover' do %>
           <%= image_tag post.user.get_icon_image(30,30), class: 'frame-circle' %>
             <span class="link-name"><%= post.user.nickname %></span>
         <% end %>
