--- a/app/views/layouts/post_partial/_comment_post.html.erb
+++ b/app/views/layouts/post_partial/_comment_post.html.erb
@@ -17,7 +17,7 @@
         <div class="d-flex bd-hightlight">
           <div class="bd-hightlight">
             <% if post_comment.user.is_deleted == false %>
-              <%= link_to public_user_path(post_comment.user) do %>
+              <%= link_to public_user_path(post_comment.user), class:'link-hover' do %>
                 <%= image_tag post_comment.user.get_icon_image(30,30), class: 'frame-circle' %>
                 <span class="link-name"><%= post_comment.user.nickname %></span>
               <% end %>
