--- a/app/views/public/relationships/show.html.erb
+++ b/app/views/public/relationships/show.html.erb
@@ -4,7 +4,7 @@
     <p class="text-secondary">フォロー数：<%= @user.followings.count %>人</p>
     <% @following_users.each do |user| %>
       <div class="py-2">
-        <%= link_to public_user_path(user) do %>
+        <%= link_to public_user_path(user), class:'link-hover' do %>
           <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
           <span class="link-name"><%= user.nickname %></span>
         <% end %>
@@ -16,7 +16,7 @@
     <p class="text-secondary">フォロワー数：<%= @user.followers.count %>人</p>
     <% @follower_users.each do |user| %>
       <div class="py-2">
-        <%= link_to public_user_path(user) do %>
+        <%= link_to public_user_path(user), class:'link-hover' do %>
           <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
           <span class="link-name"><%= user.nickname %></span>
         <% end %>
