--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -14,7 +14,7 @@
     <div>
       <% @users.each do |user| %>
         <div class="delimiter-b">
-          <%= link_to public_user_path(user), class: 'mr-auto bd-hightlight h5' do %>
+          <%= link_to public_user_path(user), class: 'mr-auto bd-hightlight h5 link-hover' do %>
             <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
             <span class="link-name"><%= user.nickname %></span>
           <% end %>
