--- a/app/views/public/topics/new.html.erb
+++ b/app/views/public/topics/new.html.erb
@@ -13,10 +13,10 @@
     <%= render 'layouts/error_messages', model: f.object, attribute: :tag_ids %>
     <div class="form-group ml-3 mt-2">
       <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name)  do |tag| %>
-        <div class="mx-1 mb-2 form-check-inline">
-          <%= tag.label class: 'form-check-label' do %>
+        <div class="mx-1 mb-2 form-check-inline tag-check">
+          <%= tag.label class: 'form-check-label check-btn' do %>
             <%= tag.check_box class: 'form-check-input' %>
-            <%= tag.text %>
+            <span class="check-text"><%= tag.text %></span>
           <% end %>
         </div>
       <% end %>
