--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -33,7 +33,7 @@
     <div class="h6 py-1 d-flex flex-column">
       <div class="pb-2"><b>◇既に会員登録をされている方へ◇</b></div>
       <div class="pb-2">
-        <%= link_to "こちら", new_user_session_path, class: 'ml-4' %>
+        <%= link_to "こちら", new_user_session_path, class: 'ml-4 link-hover' %>
         からログインできます
       </div>
     </div>
