--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,13 @@
   text-align: center;
  }
 
+ .nav-item:hover {
+   border: solid 1px #17a2b8;
+   background-color: #17a2b885;
+   font-weight: 600;
+
+ }
+
 .achivement-btn input {
   display: none;
 }
